--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TimePick"></activity>
+        <activity android:name=".Result"></activity>
+        <activity android:name=".TimePick" />
         <activity android:name=".Places" />
         <activity android:name=".menu">
             <intent-filter>
